--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muhammad Zain</title>
+    <title>Muhammad Zain | Gen-AI Engineer & Full-Stack Developer</title>
+    <meta name="description" content="Portfolio of Muhammad Zain, Gen-AI Engineer and full-stack MERN developer. Explore AI projects, web apps, and more." />
+    <meta name="keywords" content="Muhammad Zain, Gen-AI Engineer, Full-Stack MERN Developer, RAG pipeline, LLM fine-tuning, LoRA, RLHF, Next.js SSR, Vector DB, Triton inference, serverless AI, TypeScript Node micro-services, AI portfolio Lahore, open-source AI utilities" />
+    <meta name="author" content="Muhammad Zain" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="canonical" href="https://zainafzal.dev/" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://zainafzal.dev/" />
+    <meta property="og:title" content="Muhammad Zain | Gen-AI Engineer & Full-Stack Developer" />
+    <meta property="og:description" content="Portfolio of Muhammad Zain, Gen-AI Engineer and full-stack MERN developer. Explore AI projects, web apps, and more." />
+    <meta property="og:image" content="/favicon.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://zainafzal.dev/" />
+    <meta name="twitter:title" content="Muhammad Zain | Gen-AI Engineer & Full-Stack Developer" />
+    <meta name="twitter:description" content="Portfolio of Muhammad Zain, Gen-AI Engineer and full-stack MERN developer. Explore AI projects, web apps, and more." />
+    <meta name="twitter:image" content="/favicon.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Muhammad Zain",
+        "jobTitle": ["Gen-AI Engineer", "Full-Stack MERN Developer"],
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Lahore",
+          "addressCountry": "Pakistan"
+        },
+        "url": "https://zainafzal.dev",
+        "sameAs": ["https://github.com/sheikhmuhammadzain", "https://linkedin.com/in/muhammmad-zain-afzal"]
+      }
+      </script>
   </head>
   <body>
     <div id="root"></div>
