added more information

--- a/index.html
+++ b/index.html
@@ -27,14 +27,28 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Muhammad Zain",
-        "jobTitle": ["Gen-AI Engineer", "Full-Stack MERN Developer"],
+        "alternateName": "Muhammad Zain Afzal",
+        "jobTitle": ["Gen-AI Engineer", "Full-Stack MERN Developer", "AI Software Engineer"],
+        "description": "Gen-AI Engineer and full-stack MERN developer who builds production-grade LLM pipelines, RAG systems, and modern web applications.",
+        "knowsAbout": ["Artificial Intelligence", "Machine Learning", "RAG Pipelines", "React", "Node.js", "TypeScript", "LLM Fine-tuning", "Vector Databases"],
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Lahore",
+          "addressRegion": "Punjab",
           "addressCountry": "Pakistan"
         },
+        "email": "zain.afzal@cybergen.com",
+        "telephone": "+92 303 2224501",
         "url": "https://zainafzal.dev",
-        "sameAs": ["https://github.com/sheikhmuhammadzain", "https://linkedin.com/in/muhammmad-zain-afzal"]
+        "image": "https://zainafzal.dev/assets/zain-VC8MXPkY.jpeg",
+        "sameAs": [
+          "https://github.com/sheikhmuhammadzain", 
+          "https://linkedin.com/in/muhammmad-zain-afzal"
+        ],
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Cybergen"
+        }
       }
       </script>
   </head>
