--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="author" content="Muhammad Zain" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="canonical" href="https://zainafzal.dev/" />
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://learn.deeplearning.ai" />
+    <!-- Load Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://zainafzal.dev/" />
