--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muhammad Zain | Gen-AI Engineer & Full-Stack Developer</title>
-    <meta name="description" content="Portfolio of Muhammad Zain, Gen-AI Engineer and full-stack MERN developer. Explore AI projects, web apps, and more." />
-    <meta name="keywords" content="Muhammad Zain, Gen-AI Engineer, Full-Stack MERN Developer, RAG pipeline, LLM fine-tuning, LoRA, RLHF, Next.js SSR, Vector DB, Triton inference, serverless AI, TypeScript Node micro-services, AI portfolio Lahore, open-source AI utilities" />
+    <title>Muhammad Zain Afzal | Full Stack Gen AI Developer</title>
+    <meta name="description" content="Muhammad Zain Afzal is a Full Stack Gen AI Developer building production-ready AI SaaS products, RAG pipelines, and agentic applications using Next.js, TypeScript, MongoDB, LangChain, ChromaDB, and modern AI APIs." />
+    <meta name="keywords" content="Muhammad Zain Afzal, Full Stack Gen AI Developer, AI SaaS, Next.js, TypeScript, MongoDB, FastAPI, LangChain, ChromaDB, RAG pipeline, ReAct agents, Gemini API, OpenAI API, document Q&A, AI data analysis, Lahore Pakistan" />
     <meta name="author" content="Muhammad Zain" />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#0a0a0a" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="canonical" href="https://zainafzal.dev/" />
     <!-- Preconnect to external domains -->
@@ -19,42 +21,67 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://zainafzal.dev/" />
-    <meta property="og:title" content="Muhammad Zain | Gen-AI Engineer & Full-Stack Developer" />
-    <meta property="og:description" content="Portfolio of Muhammad Zain, Gen-AI Engineer and full-stack MERN developer. Explore AI projects, web apps, and more." />
-    <meta property="og:image" content="/favicon.png" />
+    <meta property="og:title" content="Muhammad Zain Afzal | Full Stack Gen AI Developer" />
+    <meta property="og:description" content="Full Stack Gen AI Developer building AI SaaS products, RAG pipelines, and agentic applications with Next.js, MongoDB, LangChain, and modern AI APIs." />
+    <meta property="og:image" content="https://zainafzal.dev/favicon.png" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://zainafzal.dev/" />
-    <meta name="twitter:title" content="Muhammad Zain | Gen-AI Engineer & Full-Stack Developer" />
-    <meta name="twitter:description" content="Portfolio of Muhammad Zain, Gen-AI Engineer and full-stack MERN developer. Explore AI projects, web apps, and more." />
-    <meta name="twitter:image" content="/favicon.png" />
+    <meta name="twitter:title" content="Muhammad Zain Afzal | Full Stack Gen AI Developer" />
+    <meta name="twitter:description" content="Full Stack Gen AI Developer building AI SaaS products, RAG pipelines, and agentic applications with Next.js, MongoDB, LangChain, and modern AI APIs." />
+    <meta name="twitter:image" content="https://zainafzal.dev/favicon.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Muhammad Zain",
-        "alternateName": "Muhammad Zain Afzal",
-        "jobTitle": ["Gen-AI Engineer", "Full-Stack MERN Developer", "AI Software Engineer"],
-        "description": "Gen-AI Engineer and full-stack MERN developer who builds production-grade LLM pipelines, RAG systems, and modern web applications.",
-        "knowsAbout": ["Artificial Intelligence", "Machine Learning", "RAG Pipelines", "React", "Node.js", "TypeScript", "LLM Fine-tuning", "Vector Databases"],
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Lahore",
-          "addressRegion": "Punjab",
-          "addressCountry": "Pakistan"
-        },
-        "email": "zain.afzal@cybergen.com",
-        "telephone": "+92 303 2224501",
-        "url": "https://zainafzal.dev",
-        "image": "https://zainafzal.dev/assets/zain-VC8MXPkY.jpeg",
-        "sameAs": [
-          "https://github.com/sheikhmuhammadzain", 
-          "https://linkedin.com/in/muhammmad-zain-afzal"
-        ],
-        "worksFor": {
-          "@type": "Organization",
-          "name": "Cybergen"
-        }
+        "@graph": [
+          {
+            "@type": "Person",
+            "@id": "https://zainafzal.dev/#person",
+            "name": "Muhammad Zain Afzal",
+            "alternateName": "Muhammad Zain",
+            "jobTitle": ["Full Stack Gen AI Developer", "Full Stack Developer", "AI Engineer"],
+            "description": "Full Stack Gen AI Developer specializing in production-ready AI SaaS products, RAG pipelines, and agentic applications using Next.js, TypeScript, MongoDB, and modern AI APIs.",
+            "knowsAbout": ["AI SaaS", "RAG Pipelines", "ReAct Agents", "LangChain", "ChromaDB", "Next.js", "TypeScript", "MongoDB", "FastAPI", "OpenAI API", "Gemini API"],
+            "address": {
+              "@type": "PostalAddress",
+              "addressLocality": "Lahore",
+              "addressRegion": "Punjab",
+              "addressCountry": "Pakistan"
+            },
+            "email": "zain@zainafzal.dev",
+            "telephone": "+92 303 2224501",
+            "url": "https://zainafzal.dev/",
+            "image": "https://zainafzal.dev/favicon.png",
+            "sameAs": [
+              "https://github.com/sheikhmuhammadzain",
+              "https://www.linkedin.com/in/muhammad-zain-afzal/"
+            ],
+            "worksFor": {
+              "@type": "Organization",
+              "name": "Qubit Dynamics"
+            }
+          },
+          {
+            "@type": "WebSite",
+            "@id": "https://zainafzal.dev/#website",
+            "url": "https://zainafzal.dev/",
+            "name": "Muhammad Zain Afzal",
+            "description": "Portfolio of Muhammad Zain Afzal — Full Stack Gen AI Developer.",
+            "publisher": { "@id": "https://zainafzal.dev/#person" }
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://zainafzal.dev/#webpage",
+            "url": "https://zainafzal.dev/",
+            "name": "Muhammad Zain Afzal | Full Stack Gen AI Developer",
+            "isPartOf": { "@id": "https://zainafzal.dev/#website" },
+            "about": { "@id": "https://zainafzal.dev/#person" },
+            "primaryImageOfPage": {
+              "@type": "ImageObject",
+              "url": "https://zainafzal.dev/favicon.png"
+            }
+          }
+        ]
       }
       </script>
   </head>
