--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <meta name="keywords" content="Muhammad Zain Afzal, Full Stack Gen AI Developer, AI SaaS, Next.js, TypeScript, MongoDB, FastAPI, LangChain, ChromaDB, RAG pipeline, ReAct agents, Gemini API, OpenAI API, document Q&A, AI data analysis, Lahore Pakistan" />
     <meta name="author" content="Muhammad Zain" />
     <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
     <meta name="theme-color" content="#0a0a0a" />
+    <meta name="color-scheme" content="dark" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="canonical" href="https://zainafzal.dev/" />
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,12 +28,16 @@
     <meta property="og:title" content="Muhammad Zain Afzal | Full Stack Gen AI Developer" />
     <meta property="og:description" content="Full Stack Gen AI Developer building AI SaaS products, RAG pipelines, and agentic applications with Next.js, MongoDB, LangChain, and modern AI APIs." />
     <meta property="og:image" content="https://zainafzal.dev/favicon.png" />
+    <meta property="og:image:alt" content="Muhammad Zain Afzal — Portfolio" />
+    <meta property="og:site_name" content="Muhammad Zain Afzal" />
+    <meta property="og:locale" content="en_US" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://zainafzal.dev/" />
     <meta name="twitter:title" content="Muhammad Zain Afzal | Full Stack Gen AI Developer" />
     <meta name="twitter:description" content="Full Stack Gen AI Developer building AI SaaS products, RAG pipelines, and agentic applications with Next.js, MongoDB, LangChain, and modern AI APIs." />
     <meta name="twitter:image" content="https://zainafzal.dev/favicon.png" />
+    <meta name="twitter:image:alt" content="Muhammad Zain Afzal — Portfolio" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
