--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         ]
       }
       </script>
+    <script src="https://js.puter.com/v2/"></script>
   </head>
   <body>
     <div id="root"></div>
